[package]
name = "test-freya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freya = "0.1.8"
dioxus = { version = "0.4", features = ["macro", "hooks"], default-features = false }
alacritty_terminal = "0.19.1"
skia-safe = "0.63.0"
futures = "0.3.28"
tokio = { version = "1.23.0", features = ["fs", "process"]}
